<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scrollbars="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@drawable/divider_normal"
                android:orientation="vertical"
                android:padding="8dp"
                android:showDividers="middle">

                <androidx.cardview.widget.CardView style="@style/Main_Card">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TextView
                            android:id="@+id/current_ttl_view"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center"
                            android:background="@drawable/rounded"
                            android:gravity="center"
                            android:textColor="#000"
                            android:textSize="48sp"
                            tools:text="63" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/main_current_ttl"
                            android:textAppearance="?android:attr/textAppearanceSmall" />

                        <TextView
                            android:id="@+id/current_ttl_scope"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/main_ttl_this_device"
                            android:textAppearance="?android:attr/textAppearanceSmall" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView style="@style/Main_Card">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/apply_ttl_method_button"
                            style="@style/Main_Button"
                            android:layout_weight="1"
                            android:text="@string/main_ttl_apply"
                            android:layout_width="match_parent" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView style="@style/Main_Card">

                    <Button
                        android:id="@+id/open_tethering_settings_button"
                        style="@style/Main_Button"
                        android:layout_width="match_parent"
                        android:text="@string/main_settings_button" />

                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView style="@style/Main_Card">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/white"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/list_age_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="16dp"
                            android:text="@string/main_ttl_list_age"
                            android:textAppearance="?android:attr/textAppearanceMedium" />


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:weightSum="2"
                            android:layout_marginBottom="2dp">

                            <TextView
                                android:id="@+id/refreshed_at"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:hint="@string/never"
                                />


                            <Button
                                android:id="@+id/refresh_list_button"
                                style="@style/Main_Button"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:text="@string/refresh_list_button" />

                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView style="@style/Main_Card">

                    <TextView
                        android:id="@+id/enjoy_android_shit_xml"
                        android:layout_width="0dp"
                        android:layout_height="0dp"/>

                </androidx.cardview.widget.CardView>

            </LinearLayout>



        </ScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>
